Uploaded image for project: 'Log4cxx'
  1. Log4cxx
  2. LOGCXX-517

Circular reference in ErrorHandlerTestCase

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 0.12.0
    • None
    • None

    Description

      For the smart pointer implementation, when GCC's sanitizers are enabled(fsanitize=leak), all tests pass except for the ErrorHandlerTestCase, which uses the FallbackErrorHandler.

       

      Likely this is due to a circular reference with the shared_ptrs. 

       

      This may be cleanly done with an API-breaking change.  The issue is that when using the DOM configurator, as soon as the XML file loads, it will attempt to open an invalid file, triggering the FallbackErrorHandler.  The FallbackErrorHandler then removes the appender, and adds a new one.  It seems that it should either propagate this error up, or replace the returned appender, instead of trying to replace the appender.

      Attachments

        Activity

          People

            rmiddleton Robert Middleton
            rmiddleton Robert Middleton
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: