LOGCXX-517 converted a shared_ptr to a weak_ptr to break a circular reference