src/main/include/log4cxx/appender.h
@@ -138,6 +138,7 @@ class LOG4CXX_EXPORT Appender :
 };
 
 LOG4CXX_PTR_DEF(Appender);
+LOG4CXX_WEAK_PTR_DEF(Appender);
 LOG4CXX_LIST_DEF(AppenderList, AppenderPtr);
 
 }
